tests/src/frontend/typechecking/invalid/final_base_construct_2.sk
base class B final ()

fun main(): void {
  b: Class<B> = B;
  _ = b();
  print_raw("No")
}
